# agentic_coding

./: .gitignore  README.md  app.py  pyproject.toml
.github/: copilot-instructions.md
