[project]
name = "simple-fastapi-app"
version = "0.1.0"
description = "A simple FastAPI application that serves a Hello, World! message via HTTP API."
authors = [
    {name = "Your Name", email = "your.email@example.com"}
]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi==0.104.1",
    "uvicorn==0.24.0",
]

[project.urls]
Homepage = "https://github.com/loganathanspr/agentic_coding"
Repository = "https://github.com/loganathanspr/agentic_coding"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
include = ["app.py"]

[tool.uv]
dev-dependencies = []